fixed versions and build scripts